--- a/public/indek.html
+++ b/public/indek.html
@@ -4,32 +4,192 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>UMKM Sungai Durian</title>
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+
+<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/11c0b81bb3.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="css/slider.css">
 <link rel="stylesheet" href="css/index.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="w-full h-auto relative pl-16 ">
-        <img class="absolute top-0 right-0 bg-landing" src="img/Group 8.png " alt="">
-        <img class="absolute left-0 top-96 w-52" src="img/Spices-removebg-preview 1.png" alt="">
+        <img class="absolute top-0 right-2 bg-landing" src="img/Group 8.png " alt="">
+        <img class="absolute left-0 img-bumbu w-44" src="img/Spices-removebg-preview 1.png" alt="">
         <div class="flex flex-row pt-5 space-x-3">
             <img class="" src="img/logo unand 1.png" alt="">
             <img src="img/Logo KKN Unand 2021 1.png" alt="">
             <h1 class="text-lg font-bold py-5">Created by Mahasiswa KKN Unand 2021</h1>
         </div>
         <div class="flex flex-row">
-            <div class="w-96 bg-green-100">
-                <h1 class="text-5xl explore">Explore your culinary taste in Sungai Durian</h1>
-                <h6 class="text-sm">Telusuri kuliner dari berbagai UMKM di Keluruhan Sungai Durian, Payakumbuh</h6>
+            <div class="w-5/12 bg-green-100 mt-20 ml-10">
+                <h1 class="explore">Explore your culinary taste in Sungai Durian</h1>
+                <h6 class="text-xl text-justify font-semibold pt-3">Telusuri kuliner dari berbagai UMKM di Keluruhan
+                    Sungai Durian, Payakumbuh</h6>
             </div>
-            <div class="">
-                <img class="absolute z-10 w-1/3" src="img/Rendang-removebg-preview 1.png" alt="">
+
+            <!-- slider show -->
+            <div class=" absolute z-10 w-1/2 right-10 h-80 -mt-20">
+                <div class="flex justify-center items-center h-screen md:-mx-4">
+                    <div class="w-full">
+                        <div class="swiper-container w-8/12 h-auto">
+                            <!-- Additional required wrapper -->
+                            <div class="swiper-wrapper">
+                                <!-- Slides -->
+                                <div class="swiper-slide">
+                                    <img class="w-full" src="img/Rendang-removebg-preview 1.png">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="w-full" src="img/Rendang-removebg-preview 1.png">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="w-full" src="img/Rendang-removebg-preview 1.png">
+                                </div>
+                            </div>
+                            <!-- If we need navigation buttons -->
+                            <div class="swiper-button-prev "></div>
+                            <div class="swiper-button-next "></div>
+                            <!-- If we need pagination -->
+                            <div class="swiper-pagination"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- text gallery -->
+        <div class="w-1/2 mt-60 mx-auto ">
+            <h1 class="text-5xl font-extrabold explore">Gallery</h1>
+            <hr class="border-2 rounded-full mt-2 mb-2 w-40 border-yellow-400">
+            <p class="text-lg font-medium">Jelajahi produk objek kuliner dan UMKM yang ada di Sungai Durian, dan
+                kunjungi outlet atau hubungi secara
+                online.</p>
+        </div>
+    </div>
+
+    <!-- container slider -->
+    <div class="w-full h-auto mt-32 flex justify-evenly flex-row">
+        <div class="w-72 bg-card h-auto pb-5 rounded-3xl bg-rendang shadow-xl relative">
+            <img class="w-full bg-contain" src="img/Rendang 11.png" alt="">
+            <h1 class="text-xl px-3 mt-1 font-semibold text-white">Rendang Yolanda</h1>
+            <p class="text-xs text-white px-3 mt-2 font-medium">Produk : Rendang telur, rendang daging, rendang
+                suir, dan produk rendang lainnya.</p>
+            <div class="flex flex-row w-1/2 px-3 mt-7 space-x-1">
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <div class="text-white text-xs pl-1  font-normal">3.1</div>
+            </div>
+            <div class="flex flex-row-reverse w-full h-auto bottom-3 absolute">
+                <img class="w-6 mx-3 " src="img/Group 3.png" alt="">
+                <img class="w-6 ml-3 " src="img/Group (1).png" alt="">
+                <img class="w-6" src="img/Group.png" alt="">
+            </div>
+        </div>
+        <div class="w-72 bg-card h-auto pb-5 rounded-3xl bg-rendang shadow-xl relative">
+            <img class="w-full bg-contain" src="img/Rendang 11.png" alt="">
+            <h1 class="text-xl px-3 mt-1 font-semibold text-white">Rendang Yolanda</h1>
+            <p class="text-xs text-white px-3 mt-2 font-medium">Produk : Rendang telur, rendang daging, rendang
+                suir, dan produk rendang lainnya.</p>
+            <div class="flex flex-row w-1/2 px-3 mt-7 space-x-1">
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <div class="text-white text-xs pl-1  font-normal">3.1</div>
+            </div>
+            <div class="flex flex-row-reverse w-full h-auto bottom-3 absolute">
+                <img class="w-6 mx-3 " src="img/Group 3.png" alt="">
+                <img class="w-6 ml-3 " src="img/Group (1).png" alt="">
+                <img class="w-6" src="img/Group.png" alt="">
+            </div>
+        </div>
+
+        <div class="w-72 bg-card h-auto pb-5 rounded-3xl bg-rendang shadow-xl relative">
+            <img class="w-full bg-contain" src="img/Rendang 11.png" alt="">
+            <h1 class="text-xl px-3 mt-1 font-semibold text-white">Rendang Yolanda</h1>
+            <p class="text-xs text-white px-3 mt-2 font-medium">Produk : Rendang telur, rendang daging, rendang
+                suir, dan produk rendang lainnya.</p>
+            <div class="flex flex-row w-1/2 px-3 mt-7 space-x-1">
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <div class="text-white text-xs pl-1  font-normal">3.1</div>
+            </div>
+            <div class="flex flex-row-reverse w-full h-auto bottom-3 absolute">
+                <img class="w-6 mx-3 " src="img/Group 3.png" alt="">
+                <img class="w-6 ml-3 " src="img/Group (1).png" alt="">
+                <img class="w-6" src="img/Group.png" alt="">
+            </div>
+        </div>
+
+        <div class="w-72 bg-card h-auto pb-5 rounded-3xl bg-rendang shadow-xl relative">
+            <img class="w-full bg-contain" src="img/Rendang 11.png" alt="">
+            <h1 class="text-xl px-3 mt-1 font-semibold text-white">Rendang Yolanda</h1>
+            <p class="text-xs text-white px-3 mt-2 font-medium">Produk : Rendang telur, rendang daging, rendang
+                suir, dan produk rendang lainnya.</p>
+            <div class="flex flex-row w-1/2 px-3 mt-7 space-x-1">
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <div class="text-white text-xs pl-1  font-normal">3.1</div>
+            </div>
+            <div class="flex flex-row-reverse w-full h-auto bottom-3 absolute">
+                <img class="w-6 mx-3 " src="img/Group 3.png" alt="">
+                <img class="w-6 ml-3 " src="img/Group (1).png" alt="">
+                <img class="w-6" src="img/Group.png" alt="">
             </div>
         </div>
     </div>
+
+    <!-- maps location -->
+    <div></div>
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15959.17789682052!2d100.60071926896838!3d-0.19809354001892843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2fd54cc8b74e9b7d%3A0x2b67e3513f750df6!2sSungai%20Durian%2C%20Payakumbuh%20Lamposi%20Tigo%20Nagori%2C%20Kota%20Payakumbuh%2C%20Sumatera%20Barat!5e0!3m2!1sid!2sid!4v1626325470118!5m2!1sid!2sid"
+        width="1400" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+
+    <script src="js/jquery.js"></script>
+    <script>
+        var mySwiper = new Swiper('.swiper-container', {
+            // Optional parameters
+            direction: 'horizontal',
+            loop: true,
+
+            // If we need pagination
+            pagination: {
+                el: '.swiper-pagination',
+            },
+
+            // Navigation arrows
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+
+            // And if we need scrollbar
+            scrollbar: {
+                el: '.swiper-scrollbar',
+            },
+        })
+    </script>
+
 </body>
 
 </html>
