--- a/public/indek.html
+++ b/public/indek.html
@@ -31,7 +31,7 @@
             <h1 class="text-lg font-bold py-5">Created by Mahasiswa KKN Unand 2021</h1>
         </div>
         <div class="flex flex-row">
-            <div class="w-5/12 bg-green-100 mt-20 ml-10">
+            <div class="w-5/12 mt-20 ml-10">
                 <h1 class="explore">Explore your culinary taste in Sungai Durian</h1>
                 <h6 class="text-xl text-justify font-semibold pt-3">Telusuri kuliner dari berbagai UMKM di Keluruhan
                     Sungai Durian, Payakumbuh</h6>
@@ -152,17 +152,98 @@
             </div>
             <div class="flex flex-row-reverse w-full h-auto bottom-3 absolute">
                 <img class="w-6 mx-3 " src="img/Group 3.png" alt="">
-                <img class="w-6 ml-3 " src="img/Group (1).png" alt="">
+                <a href="http://wa.me/6285274443008"><img class="w-6 ml-3 " src="img/Group (1).png" alt=""></a>
                 <img class="w-6" src="img/Group.png" alt="">
             </div>
         </div>
     </div>
 
     <!-- maps location -->
-    <div></div>
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15959.17789682052!2d100.60071926896838!3d-0.19809354001892843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2fd54cc8b74e9b7d%3A0x2b67e3513f750df6!2sSungai%20Durian%2C%20Payakumbuh%20Lamposi%20Tigo%20Nagori%2C%20Kota%20Payakumbuh%2C%20Sumatera%20Barat!5e0!3m2!1sid!2sid!4v1626325470118!5m2!1sid!2sid"
-        width="1400" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <div class="mt-20 relative z-10">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15959.17789682052!2d100.60071926896838!3d-0.19809354001892843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2fd54cc8b74e9b7d%3A0x2b67e3513f750df6!2sSungai%20Durian%2C%20Payakumbuh%20Lamposi%20Tigo%20Nagori%2C%20Kota%20Payakumbuh%2C%20Sumatera%20Barat!5e0!3m2!1sid!2sid!4v1626325470118!5m2!1sid!2sid"
+            width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="w-80 bg-white border-2 border-yellow-400 rounded-3xl absolute z-10 h-4/6 right-20 top-28 px-10 ">
+            <h1 class="text-xl font-semibold text-center text-green-800 my-4">Feedback</h1>
+            <span class="text-green-800 text-md font-semibold mt-2">Nama</span>
+            <input class="w-full border border-green-700  rounded-md mb-3 " type="text">
+            <span class="text-green-800 text-md font-semibold">Testimoni</span>
+            <input class="w-full border border-green-700  rounded-md h-32" type="text">
+            <div class="flex flex-row text-2xl ml-12 mt-3">
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+            <button
+                class="w-40 h-auto py-2 rounded-xl mt-6 ml-10 bg-green-color bg-green-800 text-white font-bold focus:outline-none">Kirim</button>
+        </div>
+    </div>
+
+    <!-- testimoni -->
+    <div class="w-full h-auto  pt-20 relative">
+        <img class="w-60 absolute right-0 -top-10 " src="img/sip.png" alt="">
+        <h1 class="w-40 mx-auto text-3xl font-bold text-yellow-300 ">Testimoni</h1>
+        <h1 class="w-1/2 text-center mx-auto text-4xl font-bold text-gray-500">Apa kata mereka?</h1>
+    </div>
+
+    <!-- slider testimoni -->
+    <div class="w-full h-auto mb-10 flex flex-row justify-evenly space-x-10 mt-10">
+        <div class="w-1/3 h-52 pt-4 pb-6 px-8 border-2 shadow-xl rounded-2xl relative ">
+            <div class="w-16 h-16 bg-gray-500 rounded-full mx-auto"></div>
+            <h1 class="text-xl font-semibold text-yellow-400 mt-2 text-center">Fajrul Ichsan kamil</h1>
+            <p class="text-xs text-gray-300 font-normal text-center">Jelajahi produk objek kuliner dan UMKM yang ada di
+                Sungai Durian, dan kunjungi outlet atau hubungi secara online.</p>
+            <div class="w-32  flex flex-row text-xl space-x-1 mt-2 mb-2 absolute bottom-2 left-40 ">
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+        </div>
+
+        <div class="w-1/3 h-52 pt-4 pb-6 px-8 border-2 shadow-xl rounded-2xl relative ">
+            <div class="w-16 h-16 bg-gray-500 rounded-full mx-auto"></div>
+            <h1 class="text-xl font-semibold text-yellow-400 mt-2 text-center">Fajrul Ichsan kamil</h1>
+            <p class="text-xs text-gray-300 font-normal text-center">Jelajahi produk objek kuliner dan UMKM yang ada di
+                Sungai Durian, dan kunjungi outlet atau hubungi secara online.</p>
+            <div class="w-32  flex flex-row text-xl space-x-1 mt-2 mb-2 absolute bottom-2 left-40 ">
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+        </div>
+
+        <div class="w-1/3 h-52 pt-4 pb-6 px-8 border-2 shadow-xl rounded-2xl relative ">
+            <div class="w-16 h-16 bg-gray-500 rounded-full mx-auto"></div>
+            <h1 class="text-xl font-semibold text-yellow-400 mt-2 text-center">Fajrul Ichsan kamil</h1>
+            <p class="text-xs text-gray-300 font-normal text-center">Jelajahi produk objek kuliner dan UMKM yang ada
+                di Sungai Durian, dan kunjungi outlet atau hubungi secara online.</p>
+            <div class="w-32  flex flex-row text-xl space-x-1 mt-2 mb-2 absolute bottom-2 left-40 ">
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas text-yellow-300 fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+        </div>
+    </div>
+
+    <!-- footer -->
+    <div class="w-full flex flex-row">
+        <img class="w-52" src="img/Group 9.png" alt="">
+        <div class="w-1/2 h-40 mt-40 ml-40 text-center">
+            <img class=" w-24 inline-block" src="img/logo unand 1.png" alt="">
+            <img class=" w-24 inline" src="img/Logo KKN Unand 2021 1.png" alt="">
+            <p class="text-xl font-medium">https://unand.ac.id/id/</p>
+            <p class="text-xl font-medium">2021 @ All right reserved by <span class="font-bold"> mahasiswa KKN Unand Sungai Durian.</span></p>
+            
+        </div>
+    </div>
 
 
     <script src="js/jquery.js"></script>
